--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family:Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -21,3 +22,16 @@ body {
   height: 100%;
   border: 2px solid pink;
 }
+
+.title-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 5rem;
+  background-color: rgba(0, 0, 0, 0.377);
+  color: rgb(77, 77, 77);
+  margin-top: 35%;
+}
+
+
+
