--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,10 @@ body {
   font-size: .8rem;
   text-align: center;
   margin-bottom: 10px;
+  color: rgb(77, 77, 77);
 }
 
+a:hover {
+  color: rgb(77, 77, 77);
+}
 
