--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 
 .container {
   height: 100%;
+  display: flex;
 }
 
 .image-container {
@@ -43,5 +44,11 @@ body {
 
 a:hover {
   color: rgb(77, 77, 77);
+}
+/* --------------------------- */
+
+.form-container {
+  background-color: rgb(17, 17, 17);
+  color: rgb(77, 77, 77);;
 }
 
