--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 body {
   height: 100vh;
+  background-color: rgb(17, 17, 17);
 }
 
 .container {
@@ -14,7 +15,7 @@ body {
   display: flex;
 }
 
-.image-container {
+.left-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -30,8 +31,8 @@ body {
   justify-content: center;
   align-items: center;
   height: 5rem;
-  background-color: rgba(0, 0, 0, 0.377);
   color: rgb(77, 77, 77);
+  background-color: rgba(0, 0, 0, 0.377);
   margin-top: 200px;
 }
 
@@ -47,8 +48,13 @@ a:hover {
 }
 /* --------------------------- */
 
-.form-container {
-  background-color: rgb(17, 17, 17);
+.right-container {
+  display: flex;
+  flex-direction: column;
   color: rgb(77, 77, 77);;
+}
+
+.paragraph-container {
+  width: 700px;
 }
 
