--- a/styles.css
+++ b/styles.css
@@ -56,5 +56,12 @@ a:hover {
 
 .paragraph-container {
   width: 700px;
+  padding: 30px 0;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.sentence {
+  margin-top: 30px;
 }
 
