--- a/styles.css
+++ b/styles.css
@@ -52,8 +52,15 @@ a:hover {
   display: flex;
   flex-direction: column;
   color: rgb(77, 77, 77);;
+  width: 100%;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+/* -----------first section---------------- */
 .paragraph-container {
   width: 700px;
   padding: 30px 0;
@@ -64,4 +71,17 @@ a:hover {
 .sentence {
   margin-top: 30px;
 }
+/* -------------second section------------------- */
+.label-input-container {
+  display: flex;
+  flex-direction: column;
+}
 
+.row {
+  display: flex;
+  gap: 5rem;
+}
+
+label {
+  font-size: .8rem;
+}
