--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
 }
 
 .footer {
-  font-size: .8rem;
+  font-size: .7rem;
   text-align: center;
   margin-bottom: 10px;
   color: rgb(77, 77, 77);
@@ -51,8 +51,15 @@ a:hover {
 .right-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  gap: 2rem;
   color: rgb(77, 77, 77);;
   width: 100%;
+}
+
+.paragraph-container,
+.form-container {
+  margin-left: 3rem;
 }
 /* -----------first section---------------- */
 .paragraph-container {
@@ -71,7 +78,11 @@ form {
   flex-direction: column;
   gap: 1rem;
 }
-
+.row-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 .label-input-container {
   display: flex;
   flex-direction: column;
@@ -83,7 +94,7 @@ form {
 }
 
 label {
-  font-size: .8rem;
+  font-size: .7rem;
 }
 /* --------------third section---------------------- */
 .submit-container {
