--- a/styles.css
+++ b/styles.css
@@ -52,19 +52,14 @@ a:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 2rem;
   color: rgb(77, 77, 77);;
   width: 100%;
 }
 
-.paragraph-container,
-.form-container {
-  margin-left: 3rem;
-}
 /* -----------first section---------------- */
 .paragraph-container {
   width: 700px;
-  padding: 30px 0;
+  padding: 30px 3rem;
   font-weight: bold;
   font-size: 1.5rem;
 }
@@ -82,6 +77,8 @@ form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding: 1rem 3rem;
+  background-color: rgba(128, 128, 128, 0.027);
 }
 .label-input-container {
   display: flex;
@@ -102,5 +99,5 @@ label {
  flex-direction: column;
  gap: 1rem;
  align-items: flex-start;
- padding: 2rem 0;
+ padding: 2rem 3rem;
 }
