--- a/styles.css
+++ b/styles.css
@@ -96,11 +96,16 @@ label {
 input {
   height: 2rem;
   font-family: 'Times New Roman', Times, serif;
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: rgb(77, 77, 77);
   background-color: rgba(128, 128, 128, 0.027);
   border-radius: 10px;
   border: rgb(77, 77, 77);
+  padding: 7px;
+}
+input:focus {
+  outline:none;
+  border: 2px solid rgb(77, 77, 77);
 }
 /* --------------third section---------------------- */
 .submit-container {
