--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 1rem 3rem;
+  padding: 1.5rem 3rem;
   background-color: rgba(128, 128, 128, 0.027);
 }
 .label-input-container {
@@ -107,11 +107,27 @@ input:focus {
   outline:none;
   border: 2px solid rgb(77, 77, 77);
 }
+
+input:invalid {
+  border-color: red;
+}
 /* --------------third section---------------------- */
 .submit-container {
  display: flex;
  flex-direction: column;
- gap: 1rem;
+ gap: 2rem;
  align-items: flex-start;
  padding: 2rem 3rem;
+}
+
+button {
+  padding: .5rem .7rem;
+  background-color: rgba(128, 128, 128, 0.027);
+  border: 2px solid rgb(77, 77, 77);
+  border-radius: 10px;
+  color: rgb(77, 77, 77);
+}
+
+button:hover {
+  background-color: rgb(17, 17, 17);
 }
